--- a/src/main/resources/templates/tarefa.html
+++ b/src/main/resources/templates/tarefa.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="tarefa/formulario">Criar Tarefa</a>
-                    <!--<a class="nav-link" href="#">Informações</a>-->
+                    <a class="nav-link active" aria-current="page">Atualiza tarefa</a>
                 </div>
             </div>
         </div>
